Refactoring Get, GetById, update and delete expense with DTO